--- a/index.html
+++ b/index.html
@@ -26,39 +26,58 @@
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-light bg-light static-top">
+  <!-- <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
       <a class="navbar-brand" href="#">Start Bootstrap</a>
       <a class="btn btn-primary" href="#">Sign In</a>
     </div>
-  </nav>
+  </nav> -->
 
   <!-- Masthead -->
   <header class="masthead text-white text-center">
     <div class="overlay"></div>
-    <div class="container">
+    <div class="">
       <div class="row">
-        <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Build a landing page for your business or project and generate more leads!</h1>
+        <div class="col-xl-12 mx-auto">
+          <h1 class="mb-3">"I just live by the ABC's: Adventurous, Brave, Creative."</h1>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <form>
-            <div class="form-row">
-              <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-              </div>
-              <div class="col-12 col-md-3">
-                <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
-              </div>
-            </div>
-          </form>
+            <h3 class="mb-3">- WALTER MITTY -</h3>
+            <h4 class="mb-1">The Secret Life Of Walter Mitty</h4>
         </div>
       </div>
     </div>
   </header>
 
+    <!-- Testimonials -->
+    <section class="testimonials text-center bg-light">
+      <div class="container">
+        <h2 class="mb-3">Comp's Profile</h2>
+        <!-- <div class="row"> -->
+          <div class="card m-auto" style="width: 36rem;">
+            <img class="card-img-top m-auto" style="width: 18rem; padding: 0.875rem; border-radius: 2.25rem!important;" src="img/comp's.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Nattawat Chaiwong</h5>
+              <p class="card-text">Computer Technical Officer @ University of Phayao</p>
+              <!-- <p class="card-text">Study in Master Degree MITM @ ICT's UP 60</p>
+              <p class="card-text">Graduate Bechelor Degree Software Engineer @ CAMT's CMU 56</p> -->
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">Study in Master Degree MITM @ ICT's UP 60</li>
+              <li class="list-group-item">Graduate Bechelor Degree Software Engineer @ CAMT's CMU 56</li>
+              <li class="list-group-item">Live in Phayao</li>
+            </ul>
+            <!-- <div class="card-body">
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div> -->
+          </div>
+        <!-- </div> -->
+      </div>
+    </section>
+
   <!-- Icons Grid -->
-  <section class="features-icons bg-light text-center">
+  <section class="features-icons bg-dark text-center">
     <div class="container">
       <div class="row">
         <div class="col-lg-4">
@@ -66,17 +85,17 @@
             <div class="features-icons-icon d-flex">
               <i class="icon-screen-desktop m-auto text-primary"></i>
             </div>
-            <h3>Fully Responsive</h3>
-            <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+            <h3 class="text-light" >Future</h3>
+            <p class="lead mb-0 text-light" >Want to be a Data Engineer or Business Analysis!</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-layers m-auto text-primary"></i>
+              <i class="icon-book-open m-auto text-primary"></i>
             </div>
-            <h3>Bootstrap 4 Ready</h3>
-            <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
+            <h3 class="text-light" >Education</h3>
+            <p class="lead mb-0 text-light">Master Degree in Modern Information Technology Management</p>
           </div>
         </div>
         <div class="col-lg-4">
@@ -84,8 +103,8 @@
             <div class="features-icons-icon d-flex">
               <i class="icon-check m-auto text-primary"></i>
             </div>
-            <h3>Easy to Use</h3>
-            <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+            <h3 class="text-light" >Work</h3>
+            <p class="lead mb-0 text-light">Computer Technical Officer!</p>
           </div>
         </div>
       </div>
@@ -96,79 +115,31 @@
   <section class="showcase">
     <div class="container-fluid p-0">
       <div class="row no-gutters">
-
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');">
+          <p class="lead mb-0 text-light">Image by <a href="https://pixabay.com/users/markusspiske-670330/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3637299">Markus Spiske</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3637299">Pixabay</a></p>
+        </div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Fully Responsive Design</h2>
-          <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+          <h2>Front-End Developer</h2>
+          <p class="lead mb-1">Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
+          <p><cite><a href="https://en.wikipedia.org/wiki/Front-end_web_development" target="_blank">https://en.wikipedia.org/wiki/Front-end_web_development</a></cite></p>
         </div>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
         <div class="col-lg-6 my-auto showcase-text">
-          <h2>Updated For Bootstrap 4</h2>
-          <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
+          <h2>Web Design</h2>
+          <p class="lead mb-1">Web design encompasses many different skills and disciplines in the production and maintenance of websites. The different areas of web design include web graphic design; interface design; authoring, including standardised code and proprietary software; user experience design; and search engine optimization. Often many individuals will work in teams covering different aspects of the design process, although some designers will cover them all.[1] The term "web design" is normally used to describe the design process relating to the front-end (client side) design of a website including writing markup. Web design partially overlaps web engineering in the broader scope of web development. Web designers are expected to have an awareness of usability and if their role involves creating markup then they are also expected to be up to date with web accessibility guidelines.</p>
+          <p><cite><a href="https://en.wikipedia.org/wiki/Web_design" target="_blank">https://en.wikipedia.org/wiki/Web_design</a></cite></p>
         </div>
       </div>
       <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');">
+          <p class="lead mb-0 text-dark"><span>Photo by <a href="https://unsplash.com/@adeolueletu?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Adeolu Eletu</a> on <a href="https://unsplash.com/s/photos/data-engineering?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
+        </div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Easy to Use &amp; Customize</h2>
-          <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Testimonials -->
-  <section class="testimonials text-center bg-light">
-    <div class="container">
-      <h2 class="mb-5">What people are saying...</h2>
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
-            <h5>Margaret E.</h5>
-            <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-            <h5>Fred S.</h5>
-            <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
-            <h5>Sarah W.</h5>
-            <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Call to Action -->
-  <section class="call-to-action text-white text-center">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-xl-9 mx-auto">
-          <h2 class="mb-4">Ready to get started? Sign up now!</h2>
-        </div>
-        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <form>
-            <div class="form-row">
-              <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-              </div>
-              <div class="col-12 col-md-3">
-                <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
-              </div>
-            </div>
-          </form>
+          <h2>Data Engineer &amp; Data Analysis</h2>
+          <p class="lead mb-1">A data engineer works with sets of data to advance data science goals. Unlike other roles, such as a data scientist, a data engineer is not generally as involved in overall strategic analysis, but more deeply involved in working hands-on with the data sets.</p>
+          <p><cite><a href="https://www.techopedia.com/definition/33707/data-engineer" target="_blank">https://www.techopedia.com/definition/33707/data-engineer</a></cite></p>
         </div>
       </div>
     </div>
@@ -180,20 +151,12 @@
       <div class="row">
         <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
           <ul class="list-inline mb-2">
-            <li class="list-inline-item">
+            <!-- <li class="list-inline-item">
               <a href="#">About</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
+            </li> -->
+            <!-- <li class="list-inline-item">&sdot;</li> -->
             <li class="list-inline-item">
-              <a href="#">Contact</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Terms of Use</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Privacy Policy</a>
+              <h5 class="text-dark">Contact</h5>
             </li>
           </ul>
           <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2020. All Rights Reserved.</p>
@@ -201,17 +164,17 @@
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
             <li class="list-inline-item mr-3">
-              <a href="#">
+              <a href="https://www.facebook.com/comzpros" target="_blank">
                 <i class="fab fa-facebook fa-2x fa-fw"></i>
               </a>
             </li>
-            <li class="list-inline-item mr-3">
+            <!-- <li class="list-inline-item mr-3">
               <a href="#">
                 <i class="fab fa-twitter-square fa-2x fa-fw"></i>
               </a>
-            </li>
+            </li> -->
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.instagram.com/comzpro/" target="_blank">
                 <i class="fab fa-instagram fa-2x fa-fw"></i>
               </a>
             </li>
