--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/landing-page.min.css" rel="stylesheet">
+  <link href="css/landing-page.css" rel="stylesheet">
 
 </head>
 
@@ -52,10 +53,10 @@
     <!-- Testimonials -->
     <section class="testimonials text-center bg-light">
       <div class="container">
-        <h2 class="mb-3">Comp's Profile</h2>
+        <!-- <h2 class="mb-3">Comp's Profile</h2> -->
         <!-- <div class="row"> -->
           <div class="card m-auto" style="width: 36rem;">
-            <img class="card-img-top m-auto" style="width: 18rem; padding: 0.875rem; border-radius: 2.25rem!important;" src="img/comp's.jpg" alt="Card image cap">
+            <img class="card-img-top m-auto" style="width: 18rem; padding: 0.875rem; border-radius: 2.25rem!important;" src="img/comp.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Nattawat Chaiwong</h5>
               <p class="card-text">Computer Technical Officer @ University of Phayao</p>
@@ -119,17 +120,29 @@
           <p class="lead mb-0 text-light">Image by <a href="https://pixabay.com/users/markusspiske-670330/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3637299">Markus Spiske</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3637299">Pixabay</a></p>
         </div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Front-End Developer</h2>
-          <p class="lead mb-1">Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
-          <p><cite><a href="https://en.wikipedia.org/wiki/Front-end_web_development" target="_blank">https://en.wikipedia.org/wiki/Front-end_web_development</a></cite></p>
+          <h2>About Me</h2>
+          <p class="lead mb-1">I am a Computer Technical Officer with a holistic knowledge of software development and design. I also have experience in Machine Learning, Data mining and Data warehouse</p>
+          <!-- <p><cite><a href="https://en.wikipedia.org/wiki/Front-end_web_development" target="_blank">https://en.wikipedia.org/wiki/Front-end_web_development</a></cite></p> -->
         </div>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
         <div class="col-lg-6 my-auto showcase-text">
-          <h2>Web Design</h2>
-          <p class="lead mb-1">Web design encompasses many different skills and disciplines in the production and maintenance of websites. The different areas of web design include web graphic design; interface design; authoring, including standardised code and proprietary software; user experience design; and search engine optimization. Often many individuals will work in teams covering different aspects of the design process, although some designers will cover them all.[1] The term "web design" is normally used to describe the design process relating to the front-end (client side) design of a website including writing markup. Web design partially overlaps web engineering in the broader scope of web development. Web designers are expected to have an awareness of usability and if their role involves creating markup then they are also expected to be up to date with web accessibility guidelines.</p>
-          <p><cite><a href="https://en.wikipedia.org/wiki/Web_design" target="_blank">https://en.wikipedia.org/wiki/Web_design</a></cite></p>
+          <div class="card">
+            <h2 class="card-header">Job Positions</h2>
+            <div class="card-body">
+              <h5 class="card-title">Front-End Developer</h5>
+              <p class="card-text">Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application.</p>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Software Engineer</h5>
+              <p class="card-text">A software engineer is a professional who applies the principles of software engineering for designing, development, maintenance, testing, and evaluation of computer software.</p>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Data Engineer &amp; Data Analysis</h5>
+              <p class="card-text">A data engineer works with sets of data to advance data science goals. Unlike other roles, such as a data scientist, a data engineer is not generally as involved in overall strategic analysis, but more deeply involved in working hands-on with the data sets</p>
+            </div>
+          </div>
         </div>
       </div>
       <div class="row no-gutters">
@@ -137,9 +150,10 @@
           <p class="lead mb-0 text-dark"><span>Photo by <a href="https://unsplash.com/@adeolueletu?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Adeolu Eletu</a> on <a href="https://unsplash.com/s/photos/data-engineering?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
         </div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Data Engineer &amp; Data Analysis</h2>
-          <p class="lead mb-1">A data engineer works with sets of data to advance data science goals. Unlike other roles, such as a data scientist, a data engineer is not generally as involved in overall strategic analysis, but more deeply involved in working hands-on with the data sets.</p>
-          <p><cite><a href="https://www.techopedia.com/definition/33707/data-engineer" target="_blank">https://www.techopedia.com/definition/33707/data-engineer</a></cite></p>
+          <h2>Project and Publications</h2>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">- Schedule travel planning system for Phayao information recommendation (2020)</li>
+          </ul>
         </div>
       </div>
     </div>
